[package]
name = "sonik"
version = "0.2.0"
authors = ["Alexander Decurnou <ad@alx.xyz>"]
edition = "2018"

[dependencies]
tui = "0.6.1"
termion = "1.5"
failure = "*"
rand = "0.6.5"
rodio = "*"
id3 = "*"
dirs = "*"
app_dirs2 = "*"
serde_derive = "*"
serde = "*"
toml = "*"
ignore = "*"
chrono = "*"
bincode = "*"
unicode-width = "*"
log = "*"
simplelog = "*"
crossbeam-channel = "*"
simsearch = "0.1"

[dependencies.hashbrown]
version = "0.5"
default-features = true
features = ["serde", "rayon"]
