[package]
name = "sonik"
version = "0.3.0"
authors = ["Alexander Decurnou <ad@alx.xyz>"]
edition = "2018"

[dependencies]
app_dirs2 = "*"
bincode = "*"
chrono = "*"
clap = "*"
crossbeam-channel = "*"
dirs = "*"
failure = "*"
id3 = "*"
ignore = "*"
log = "*"
rand = "0.6.5"
rodio = "*"
serde = "*"
serde_derive = "*"
simplelog = "*"
simsearch = "0.1"
termion = "1.5"
toml = "*"
tui = "0.6.1"
unicode-width = "*"

[dependencies.hashbrown]
version = "0.5"
default-features = true
features = ["serde", "rayon"]
